Обработка formData
